@startuml

title __STUDYRETROFIT's Class Diagram__\n

  namespace com.xiaoma {
    namespace studyretrofit {
      class com.xiaoma.studyretrofit.DemoAdapter {
          {static} - TAG : String
          - mContext : Context
          - mDatas : List<String>
          + DemoAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyretrofit {
      class com.xiaoma.studyretrofit.DemoAdapter.ViewHolder {
          ~ mName : TextView
          + ViewHolder()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyretrofit {
      class com.xiaoma.studyretrofit.DemoRetrofitActivity {
          ~ disposable : Disposable
          ~ handler : Handler
          ~ mBtnOkhttp : Button
          ~ mBtnRetrofit : Button
          ~ mBtnSingle : Button
          ~ mTvContent : TextView
          {static} - TAG : String
          - mDisposable : Disposable
          + getLifecycle()
          + onClick()
          # onCreate()
          # onDestroy()
          - getData()
          - getOkData()
          - getSingleDatas()
          - studyRxjava()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyretrofit {
      interface com.xiaoma.studyretrofit.GitHubService {
          {abstract} + listRepos()
          {abstract} + serviceApi()
          {abstract} + singleRepos()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyretrofit {
      class com.xiaoma.studyretrofit.NetResponse {
          - code : int
          - msg : String
          + toString()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace studyretrofit {
      class com.xiaoma.studyretrofit.Repo {
      }
    }
  }
  

  com.xiaoma.studyretrofit.DemoAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.xiaoma.studyretrofit.DemoAdapter +-down- com.xiaoma.studyretrofit.DemoAdapter.ViewHolder
  com.xiaoma.studyretrofit.DemoAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.xiaoma.studyretrofit.DemoRetrofitActivity .up.|> androidx.lifecycle.LifecycleOwner
  com.xiaoma.studyretrofit.DemoRetrofitActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
